# spaceduck

./: .dockerignore  .env.example  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  VISION.md  bunfig.toml  docker-compose.yml  package.json  release-please-config.json  tsconfig.json
.cursor/rules/: brand-colors.mdc  bun-runtime.mdc  bun-typescript.mdc  git-workflow.mdc  mintlify-docs.mdc  packages.mdc  post-implementation.mdc  project-overview.mdc  project-structure.mdc  testing.mdc  tool-development.mdc  web-frontend.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  deploy-website.yml  desktop-release.yml  develop-to-main.yml  release-please.yml  release.yml  test-installer.yml
apps/cli/: CHANGELOG.md  package.json
apps/desktop/: CHANGELOG.md  package.json
apps/desktop/src-tauri/: Cargo.toml  loading.html  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: fn_key_monitor.rs  lib.rs  main.rs
apps/spaceduck-website/: astro.config.mjs  package.json
apps/web/: CHANGELOG.md  index.html  package.json  vite.config.ts
assets/: memory-layers.html
dev-scripts/: run-llama3.sh  run-nomic.sh
docs/: docs.json  index.mdx  install.mdx  platforms.mdx  quickstart.mdx
docs/architecture/: autonomous-agents.md
docs/concepts/: memory-search.mdx  memory.mdx  scheduler.mdx  (+2 more)
scripts/: release-contract.json  smoke-docker.sh
(+64 files in other folders)
